# dqxclarity

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CODEOWNERS  LICENSE  Makefile  README.md  RELEASES.md  package-lock.json  package.json  pyproject.toml  renovate.json  requirements.txt  requirements_dev.txt  user_settings.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: _compile_launcher.yml  auto-merge.yml  build-pr-launcher.yml  build-pr.yml  build-release.yml  claude.yml  dev-release.yml  prod-release.yml  tests.yml
DqxClarity/: App.axaml  App.axaml.cs  DqxClarity.csproj  PORTING.md  Program.cs  README.md  Taskfile.yml  app.manifest
DqxClarity/Data/: ClarityDb.cs  schema.sql
DqxClarity/Hooking/: ClarityRuntime.cs  NativeLogTail.cs  PacketPipe.cs
DqxClarity/Models/: AppConfig.cs  LogLine.cs
DqxClarity/Packets/: DataPacketRouter.cs  GamePacket.cs  IPacket.cs  PacketBuffer.cs
DqxClarity/Services/: BannerService.cs  ConfigService.cs  DatabaseService.cs  GameLaunchService.cs  LocaleEmulatorService.cs  MaintenanceService.cs  PacketWardenService.cs  PatchService.cs  PlayerListReader.cs  Text2ClipboardStrings.cs  ThemeService.cs  UpdateService.cs  ValidateService.cs
DqxClarity/Styles/: BaseStyles.axaml
DqxClarity/Translation/: GlossaryCache.cs  IRomanizer.cs  ITranslationBackend.cs  PlaceholderTags.cs  QuestRewardFormatter.cs  Romanizer.cs  TextWrapping.cs  Translator.cs
DqxClarity/Updates/: CommunityApi.cs  TranslationConstants.cs  TranslationUpdater.cs
DqxClarity/ViewModels/: BannerDotItem.cs  DebugViewModel.cs  LogViewModel.cs  MainViewModel.cs  NamePair.cs  SettingsViewModel.cs  Text2ClipboardViewModel.cs
DqxClarity/Views/: AboutPopup.axaml  AboutPopup.axaml.cs  ConfirmDialog.axaml  ConfirmDialog.axaml.cs  Converters.cs  DebugView.axaml  DebugView.axaml.cs  ErrorDetailDialog.axaml  ErrorDetailDialog.axaml.cs  InfoDialog.axaml  InfoDialog.axaml.cs  InputDialog.axaml  InputDialog.axaml.cs  LogView.axaml  LogView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  SettingsView.axaml  SettingsView.axaml.cs  SupportPopup.axaml  SupportPopup.axaml.cs  Text2ClipboardView.axaml  Text2ClipboardView.axaml.cs  UpdateDialog.axaml  UpdateDialog.axaml.cs  UpdateProgressDialog.axaml  UpdateProgressDialog.axaml.cs  WelcomeDialog.axaml  WelcomeDialog.axaml.cs
DqxClarity/native/: CMakeLists.txt  PacketWarden.cpp  build.ps1
DqxClarity/native/wanakana/: Cargo.toml  build.ps1
DqxClarity/native/wanakana/src/: lib.rs
adhoc_parser/: main.py  scrub.py
adhoc_parser/abbreviate/: __init__.py  structures.py
app/: clarity.py  evtxfile.py  main.py  run_clarity.ps1  updater.py
app/bms/: README.md  blacklist.py  bms_file_list.txt  dqx.bms  dump.ps1  port_to_json.py
app/common/: blacklist.py  config.py  constants.py  db_ops.py  errors.py  lib.py  measure.py  memory.py  memory_local.py  process.py  signatures.py  translate.py  update.py
app/dqxcrypt/: LICENSE  dqxcrypt.py  frida_agent.py
app/hooking/: README.md  accept_quest.py  activate.py  blowfish_logger.py  corner_text.py  cutscene.py  cutscene_log.py  dialog.py  easydetour.py  hash_logger.py  hide_hooks.py  hook.py  memchr.py  nameplates.py  network_text.py  ominous_text_log.py  party.py  player.py  quest.py  trampoline.py  walkthrough.py
app/launcher/: build.bat  dqxclarity.ahk
app/misc_files/: README.md  hex_dict.csv  merge.xlsx  name_overrides.json
app/pymem/: __init__.py  exception.py  memory.py  pattern.py  process.py  ptypes.py  thread.py
app/scans/: comms.py  manager.py  npc_names.py  player_names.py  sibling.py  walkthrough.py
app/tests/: test_config.py  test_lib.py  test_memory.py  test_translate.py  test_updater.py
auto_translate/: .gitignore  README.md  env  globals.py  main.py  requirements.txt
auto_translate/files/: eventTextCsMe6Client.json
launcher/: .gitignore  App.axaml  App.axaml.cs  DqxClarity.Launcher.csproj  Program.cs  README.md  Taskfile.yml  app.manifest  package-lock.json  package.json  svelte.config.js
launcher/Models/: AppConfig.cs  ClpkFormat.cs  LanguageNames.cs  LanguagePackCatalog.cs  LogLine.cs  SetupException.cs  SetupStep.cs
launcher/Services/: BannerService.cs  ConfigService.cs  DatabaseService.cs  GameLaunchService.cs  LanguagePackService.cs  LocaleEmulatorService.cs  MaintenanceService.cs  ModsService.cs  PatchService.cs  PlayerListReader.cs  ProcessService.cs  Send2ChatInputService.cs  Send2ChatMemoryService.cs  Send2ChatStrings.cs  SetupService.cs  SubStream.cs  Text2ClipboardStrings.cs  ThemeService.cs  UpdateService.cs  ValidateService.cs
launcher/Styles/: BaseStyles.axaml
launcher/ViewModels/: BannerDotItem.cs  LogViewModel.cs  MainViewModel.cs  NamePair.cs  Send2ChatViewModel.cs  SettingsViewModel.cs  SetupViewModel.cs  Text2ClipboardViewModel.cs
launcher/Views/: AboutPopup.axaml  AboutPopup.axaml.cs  ConfirmDialog.axaml  ConfirmDialog.axaml.cs  Converters.cs  ErrorDetailDialog.axaml  ErrorDetailDialog.axaml.cs  InfoDialog.axaml  InfoDialog.axaml.cs  InputDialog.axaml  InputDialog.axaml.cs  LogView.axaml  LogView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Send2ChatView.axaml  Send2ChatView.axaml.cs  SettingsView.axaml  SettingsView.axaml.cs  SetupView.axaml  SetupView.axaml.cs  SupportPopup.axaml  SupportPopup.axaml.cs  (+8 more)
launcher/native/: CMakeLists.txt  LocaleHook.c  build.ps1
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/icons/: icon.icns
launcher/src-tauri/src/: lib.rs  main.rs
launcher/src-tauri/src/commands/: config.rs  database.rs  environment.rs  mod.rs  patch.rs  process.rs  update.rs  validate.rs
local-tools/: README_MODDING.md  mod.jsons.example  package-local.ps1
scripts/: README.md  build-launcher.ps1  find_names.py  package-local.ps1  requirements.txt
(+185 files in other folders)
