[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dqxclarity"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "configparser==7.2.0",
    "deepl==1.29.0",
    "frida==17.5.2",
    "google-api-core==2.31.0",
    "google-api-python-client==2.196.0",
    "loguru==0.7.3",
    "openpyxl==3.1.5",
    "pykakasi==2.3.0",
    "regex==2026.4.4",
    "requests==2.34.2",
]

[project.optional-dependencies]
dev = [
    "frida-tools==14.7.0",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.version]
path = "version.update"
pattern = "^(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)"

[tool.ruff]
line-length = 125
fix = true
src = ["app"]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"app/pymem/**" = ["E", "W", "F", "I", "B", "C4", "UP"]  # forked module

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
lines-after-imports = 2
no-sections = true
