[package]
name = "dqxclarity"
version = "0.1.0"
description = "dqxclarity launcher"
authors = []
edition = "2021"

[lib]
name = "dqxclarity_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
md5 = "0.7"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
